修复 villagerEvents 记录器实现